[gd_scene load_steps=8 format=3]

[ext_resource type="Script" path="res://CULINARY_KAIJU_CHEF_COMPLETE.gd" id="1"]
[ext_resource type="PackedScene" path="res://features/ui/upgrade_selection/UpgradeSelectionUI.tscn" id="2"]

[sub_resource type="CircleShape2D" id="CircleShape2D_chef"]
radius = 30.0

[sub_resource type="CircleShape2D" id="CircleShape2D_collector"]
radius = 80.0

[sub_resource type="CircleShape2D" id="CircleShape2D_onion"]
radius = 12.0

[sub_resource type="Environment" id="Environment_1"]
background_mode = 1
background_color = Color(0.2, 0.15, 0.05, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_cleaver"]
radius = 8.0

[node name="CulinaryKaijuChefComplete" type="Node2D"]
script = ExtResource("1")

[node name="MonsterChef" type="CharacterBody2D" parent="." groups=["player", "main_game"]]
position = Vector2(400, 300)
collision_layer = 2
collision_mask = 1

[node name="ChefBody" type="ColorRect" parent="MonsterChef"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -30.0
offset_right = 30.0
offset_bottom = 30.0
color = Color(0.8, 0.4, 0.2, 1)

[node name="ChefHat" type="ColorRect" parent="MonsterChef"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
offset_bottom = -25.0
color = Color(1, 1, 1, 1)

[node name="ChefEyes" type="ColorRect" parent="MonsterChef"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -15.0
offset_right = 8.0
offset_bottom = -5.0
color = Color(1, 0, 0, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="MonsterChef"]
shape = SubResource("CircleShape2D_chef")

[node name="IngredientCollector" type="Area2D" parent="MonsterChef"]
collision_layer = 0
collision_mask = 32

[node name="CollectorShape" type="CollisionShape2D" parent="MonsterChef/IngredientCollector"]
shape = SubResource("CircleShape2D_collector")

[node name="Camera2D" type="Camera2D" parent="MonsterChef"]

[node name="OnionTemplate" type="Area2D" parent="."]
position = Vector2(600, 300)
collision_layer = 4
collision_mask = 8

[node name="OnionSprite" type="Node2D" parent="OnionTemplate"]

[node name="OnionBody" type="ColorRect" parent="OnionTemplate/OnionSprite"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -12.0
offset_top = -12.0
offset_right = 12.0
offset_bottom = 12.0
color = Color(0.8, 0.6, 0.9, 1)

[node name="OnionLayers" type="ColorRect" parent="OnionTemplate/OnionSprite"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0
color = Color(0.9, 0.8, 1, 1)

[node name="OnionFace" type="ColorRect" parent="OnionTemplate/OnionSprite"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -6.0
offset_top = -4.0
offset_right = 6.0
offset_bottom = 2.0
color = Color(0.8, 0.2, 0.2, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="OnionTemplate"]
shape = SubResource("CircleShape2D_onion")

[node name="CleaverTemplate" type="Area2D" parent="."]
position = Vector2(500, 200)
collision_layer = 8
collision_mask = 4

[node name="CleaverBlade" type="ColorRect" parent="CleaverTemplate"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -3.0
offset_top = -10.0
offset_right = 3.0
offset_bottom = 10.0
color = Color(0.8, 0.8, 0.9, 1)

[node name="CleaverHandle" type="ColorRect" parent="CleaverTemplate"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -2.0
offset_top = 6.0
offset_right = 2.0
offset_bottom = 12.0
color = Color(0.4, 0.2, 0.1, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="CleaverTemplate"]
shape = SubResource("CircleShape2D_cleaver")

[node name="SpiceTemplate" type="Area2D" parent="."]
position = Vector2(450, 250)
collision_layer = 32
collision_mask = 0

[node name="SpiceSprite" type="Node2D" parent="SpiceTemplate"]

[node name="SpiceCore" type="ColorRect" parent="SpiceTemplate/SpiceSprite"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -6.0
offset_top = -6.0
offset_right = 6.0
offset_bottom = 6.0
color = Color(1, 0.8, 0, 1)

[node name="SpiceGlow" type="ColorRect" parent="SpiceTemplate/SpiceSprite"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = -4.0
offset_right = 4.0
offset_bottom = 4.0
color = Color(1, 1, 0.5, 1)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_1")

[node name="UI" type="CanvasLayer" parent="."]

[node name="HUD" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TopLeft" type="VBoxContainer" parent="UI/HUD"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = -200.0
offset_right = 350.0
offset_bottom = -16.0

[node name="Title" type="Label" parent="UI/HUD/TopLeft"]
layout_mode = 2
text = "üç≥ CULINARY KAIJU CHEF üç≥"
horizontal_alignment = 1

[node name="ChefLevel" type="Label" parent="UI/HUD/TopLeft"]
layout_mode = 2
text = "üêâ Chef Level: 1"

[node name="AppetiteBar" type="ProgressBar" parent="UI/HUD/TopLeft"]
layout_mode = 2
max_value = 100.0
value = 50.0
show_percentage = false

[node name="AppetiteLabel" type="Label" parent="UI/HUD/TopLeft"]
layout_mode = 2
text = "üî• Culinary Appetite: 50/100"

[node name="IngredientsChopped" type="Label" parent="UI/HUD/TopLeft"]
layout_mode = 2
text = "üç¥ Ingredients Chopped: 0"

[node name="CulinaryPower" type="Label" parent="UI/HUD/TopLeft"]
layout_mode = 2
text = "‚ö° Power: Novice Monster Chef"

[node name="TopRight" type="VBoxContainer" parent="UI/HUD"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -300.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = 150.0

[node name="Instructions" type="Label" parent="UI/HUD/TopRight"]
layout_mode = 2
text = "üéÆ USE WASD TO ROAM THE CITY
üî™ CLEAVERS AUTO-CHOP INGREDIENTS  
üßÖ REBELLIOUS ONIONS APPROACH!
‚≠ê COLLECT SPICE ESSENCE TO GROW STRONGER"
horizontal_alignment = 2

[node name="GameTimer" type="Label" parent="UI/HUD/TopRight"]
layout_mode = 2
text = "‚è∞ Time: 00:00"
horizontal_alignment = 2

[node name="EnemiesAlive" type="Label" parent="UI/HUD/TopRight"]
layout_mode = 2
text = "üßÖ Rebellious Ingredients: 0"
horizontal_alignment = 2

[node name="UpgradeSelectionUI" parent="UI" instance=ExtResource("2")]